2022-03-08  Diego Pino Garcia  <dpino@igalia.com>

        [macOS] Unreviewed, non-unified build fixes
        https://bugs.webkit.org/show_bug.cgi?id=237586

        * Shared/ModelIdentifier.h:
        * UIProcess/API/Cocoa/_WKRemoteWebInspectorViewControllerInternal.h:
        * UIProcess/Cocoa/ModelElementControllerCocoa.mm:
        * UIProcess/ModelElementController.h:

2022-03-08  J Pascoe  <j_pascoe@apple.com>

        [WebAuthn] Using WebAuthn within cross-origin iframe elements
        https://bugs.webkit.org/show_bug.cgi?id=222240
        rdar://problem/74830748

        Reviewed by Brent Fulgham.

        This patch relaxes the requirement to perform a Web Authentication assertion
        inside an i-frame with the "publickey-credentials-get" feature policy from
        'same-site' to 'cross-origin with consent'.

        There is an additional requirement that there is only a single cross-origin
        parent to present to the user in the prompt. If we can't display the updated
        prompt, then cross-origin assertions are not allowed. 

        * Platform/spi/Cocoa/AuthenticationServicesCoreSPI.h:
        * UIProcess/WebAuthentication/Cocoa/WebAuthenticatorCoordinatorProxy.mm:
        (WebKit::configureAssertionOptions):
        (WebKit::configurationAssertionRequestContext):
        (WebKit::WebAuthenticatorCoordinatorProxy::contextForRequest):
        * UIProcess/WebAuthentication/WebAuthenticationRequestData.h:
        * UIProcess/WebAuthentication/WebAuthenticatorCoordinatorProxy.cpp:
        (WebKit::WebAuthenticatorCoordinatorProxy::makeCredential):
        (WebKit::WebAuthenticatorCoordinatorProxy::getAssertion):
        (WebKit::WebAuthenticatorCoordinatorProxy::handleRequest):
        * UIProcess/WebAuthentication/WebAuthenticatorCoordinatorProxy.h:
        * UIProcess/WebAuthentication/WebAuthenticatorCoordinatorProxy.messages.in:
        * WebProcess/WebAuthentication/WebAuthenticatorCoordinator.cpp: