@@ -1,3 +1,15 @@
+2022-03-08  Alex Christensen  <achristensen@webkit.org>
+
+        Enable CFPrefs direct mode in adattributiond
+        https://bugs.webkit.org/show_bug.cgi?id=237620
+
+        Reviewed by Per Arne Vollan.
+
+        This makes it not try to connect to cfprefsd, which is not allowed by the sandbox.
+
+        * Shared/EntryPointUtilities/Cocoa/Daemon/PCMDaemonEntryPoint.mm:
+        (WebKit::PCMDaemonMain):
+
 2022-03-08  Diego Pino Garcia  <dpino@igalia.com>
 
         [macOS] Unreviewed, non-unified build fixes
